[gd_scene load_steps=18 format=3 uid="uid://b2i6x10iatwum"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_pd7es"]
[ext_resource type="Script" path="res://Scripts/LevelSelector.gd" id="2_52vh0"]
[ext_resource type="PackedScene" uid="uid://dku6tgnvso8fr" path="res://Entities/player.tscn" id="2_146rn"]
[ext_resource type="PackedScene" uid="uid://jq2elfqgbp27" path="res://Scenes/ghost.tscn" id="4_q01vl"]
[ext_resource type="PackedScene" uid="uid://1ksnfui8mwlv" path="res://Levels/level0.tscn" id="6_vnsvh"]
[ext_resource type="PackedScene" uid="uid://baqrqfm4yxwck" path="res://Levels/level1.tscn" id="6_wuisk"]
[ext_resource type="PackedScene" uid="uid://dbm1e8gtik5rv" path="res://Scenes/hud.tscn" id="7_ltflu"]
[ext_resource type="PackedScene" uid="uid://gjuygdvv8hp3" path="res://Levels/level2.tscn" id="9_vwxht"]
[ext_resource type="PackedScene" uid="uid://ceu8p1tm4bmfi" path="res://Levels/level3.tscn" id="10_l0o5c"]
[ext_resource type="PackedScene" uid="uid://dn553q7ip4304" path="res://Scenes/goal.tscn" id="11_38xe7"]
[ext_resource type="PackedScene" uid="uid://cs15hg0ty8to8" path="res://Scenes/logo.tscn" id="11_gggvu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdr3f"]

[sub_resource type="LabelSettings" id="LabelSettings_o53ck"]
font_size = 120
outline_size = 20
outline_color = Color(0.698039, 0, 0.698039, 1)

[sub_resource type="Animation" id="Animation_cd2ty"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-105, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player/Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_2guvw"]
resource_name = "default"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-95, -0.25, 0, 0.25, 0, -1127, -1.5, 19.1423, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-105, -0.25, 0, 0.25, 0, -107, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}

[sub_resource type="Animation" id="Animation_j1wrn"]
resource_name = "titleToMain"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wk8vn"]
_data = {
"RESET": SubResource("Animation_cd2ty"),
"default": SubResource("Animation_2guvw"),
"titleToMain": SubResource("Animation_j1wrn")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_pd7es")

[node name="LevelSelector" type="Node" parent="."]
script = ExtResource("2_52vh0")

[node name="Ghost" parent="." instance=ExtResource("4_q01vl")]
position = Vector2(-1158, 70)

[node name="Player" parent="." instance=ExtResource("2_146rn")]
process_mode = 2
position = Vector2(-95, -105)
turn_speed = 0.01

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.2, 0.2)
position_smoothing_enabled = true

[node name="TimeLabel" type="Label" parent="."]
visible = false
material = SubResource("ShaderMaterial_gdr3f")
offset_left = -692.0
offset_top = -330.0
offset_right = -485.0
offset_bottom = -162.0
text = "123"
label_settings = SubResource("LabelSettings_o53ck")

[node name="HUD" parent="." instance=ExtResource("7_ltflu")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wk8vn")
}

[node name="Level0" parent="." instance=ExtResource("6_vnsvh")]

[node name="Level1" parent="." instance=ExtResource("6_wuisk")]
visible = false

[node name="Level2" parent="." instance=ExtResource("9_vwxht")]
visible = false

[node name="Level3" parent="." instance=ExtResource("10_l0o5c")]
visible = false

[node name="Goal" parent="." instance=ExtResource("11_38xe7")]

[node name="Logo" parent="." instance=ExtResource("11_gggvu")]
position = Vector2(-150, -871)

[connection signal="goal_reached" from="." to="Ghost" method="_on_goal_reached"]
[connection signal="new_record" from="." to="Ghost" method="_on_new_record"]
